Adding examples for REST Get Endpoints
